move some stuff to util. RC4 decrypt throw a CryptoException to be more clear where is the error while decryption.